deploy: 7261883f5be04d0399abb00762bbdcc697ff723e

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -53,7 +53,7 @@
 <li><a href="copyxnat/pyreporter/file_logger.html">copyxnat.pyreporter.file_logger</a></li>
 <li><a href="copyxnat/pyreporter/progress.html">copyxnat.pyreporter.progress</a></li>
 <li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
-<li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
+<li><a href="copyxnat/ui/command_line.html">copyxnat.ui.command_line</a></li>
 <li><a href="copyxnat/utils/network_utils.html">copyxnat.utils.network_utils</a></li>
 <li><a href="copyxnat/utils/rsync.html">copyxnat.utils.rsync</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
