--- a/copyxnat.utils.html
+++ b/copyxnat.utils.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.utils.network_utils module" href="copyxnat.utils.network_utils.html" />
-    <link rel="prev" title="copyxnat.ui.copyxnat_command_line module" href="copyxnat.ui.copyxnat_command_line.html" /> 
+    <link rel="prev" title="copyxnat.ui.command_line module" href="copyxnat.ui.command_line.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.utils.network_utils.html" title="copyxnat.utils.network_utils module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.ui.copyxnat_command_line.html" title="copyxnat.ui.copyxnat_command_line module"
+          <a href="copyxnat.ui.command_line.html" title="copyxnat.ui.command_line module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -85,8 +85,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.ui.copyxnat_command_line.html"
-                        title="previous chapter">copyxnat.ui.copyxnat_command_line module</a></p>
+  <p class="topless"><a href="copyxnat.ui.command_line.html"
+                        title="previous chapter">copyxnat.ui.command_line module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.utils.network_utils.html"
                         title="next chapter">copyxnat.utils.network_utils module</a></p>
@@ -124,7 +124,7 @@
           <a href="copyxnat.utils.network_utils.html" title="copyxnat.utils.network_utils module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.ui.copyxnat_command_line.html" title="copyxnat.ui.copyxnat_command_line module"
+          <a href="copyxnat.ui.command_line.html" title="copyxnat.ui.command_line module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
