--- a/genindex.html
+++ b/genindex.html
@@ -312,10 +312,10 @@
 </li>
       </ul></li>
       <li>
-    copyxnat.ui.copyxnat_command_line
+    copyxnat.ui.command_line
 
       <ul>
-        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">module</a>
+        <li><a href="copyxnat.ui.command_line.html#module-copyxnat.ui.command_line">module</a>
 </li>
       </ul></li>
       <li>
@@ -874,7 +874,7 @@
 </li>
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">copyxnat.ui</a>
 </li>
-        <li><a href="copyxnat.ui.copyxnat_command_line.html#module-copyxnat.ui.copyxnat_command_line">copyxnat.ui.copyxnat_command_line</a>
+        <li><a href="copyxnat.ui.command_line.html#module-copyxnat.ui.command_line">copyxnat.ui.command_line</a>
 </li>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">copyxnat.utils</a>
 </li>
@@ -1193,7 +1193,7 @@
         <li><a href="versioneer.html#versioneer.run_command">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.run_command_line">run_command_line() (in module copyxnat.ui.copyxnat_command_line)</a>
+      <li><a href="copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_command_line">run_command_line() (in module copyxnat.ui.command_line)</a>
 </li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.api.run_command)</a>
 </li>
