deploy: ebb07fc986ef7dba6a7b6a950742aa1a1af13fba

--- a/genindex.html
+++ b/genindex.html
@@ -632,10 +632,12 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatReconstruction.get_or_create_child">(copyxnat.xnat.xnat_interface.XnatReconstruction method)</a>
 </li>
       </ul></li>
-      <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.get_password">get_password() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_server">get_server() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
