--- a/_modules/copyxnat/pyreporter/pyreporter.html
+++ b/_modules/copyxnat/pyreporter/pyreporter.html
@@ -41,6 +41,7 @@
 <span></span><span class="c1"># coding=utf-8</span>
 
 <span class="sd">&quot;&quot;&quot;Logging and user I/O&quot;&quot;&quot;</span>
+<span class="kn">from</span> <span class="nn">getpass</span> <span class="kn">import</span> <span class="n">getpass</span>
 <span class="kn">from</span> <span class="nn">copyxnat.pyreporter.console</span> <span class="kn">import</span> <span class="n">Console</span>
 <span class="kn">from</span> <span class="nn">copyxnat.pyreporter.console_logger</span> <span class="kn">import</span> <span class="n">ConsoleLogger</span>
 <span class="kn">from</span> <span class="nn">copyxnat.pyreporter.file_logger</span> <span class="kn">import</span> <span class="n">FileLogger</span>
@@ -98,6 +99,10 @@
         <span class="sd">&quot;&quot;&quot;Print text to the console without a message prefix&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">handler</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_log_handlers</span><span class="p">:</span>
             <span class="n">handler</span><span class="o">.</span><span class="n">output</span><span class="p">(</span><span class="n">message</span><span class="p">)</span></div>
+
+<div class="viewcode-block" id="PyReporter.get_password"><a class="viewcode-back" href="../../../copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.get_password">[docs]</a>    <span class="k">def</span> <span class="nf">get_password</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>  <span class="c1"># pylint:disable=no-self-use</span>
+        <span class="sd">&quot;&quot;&quot;Obtain a password&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">getpass</span><span class="p">(</span><span class="n">message</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="PyReporter.log"><a class="viewcode-back" href="../../../copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.log">[docs]</a>    <span class="k">def</span> <span class="nf">log</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">message</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Message which should always be written to the log but not shown</span>
