--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -663,6 +663,11 @@
         <span class="k">if</span> <span class="n">params</span><span class="o">.</span><span class="n">insecure</span><span class="p">:</span>
             <span class="n">urllib3</span><span class="o">.</span><span class="n">disable_warnings</span><span class="p">(</span><span class="n">urllib3</span><span class="o">.</span><span class="n">exceptions</span><span class="o">.</span><span class="n">InsecureRequestWarning</span><span class="p">)</span>
 
+        <span class="k">if</span> <span class="n">params</span><span class="o">.</span><span class="n">authenticate</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">params</span><span class="o">.</span><span class="n">pwd</span><span class="p">:</span>
+            <span class="n">params</span><span class="o">.</span><span class="n">pwd</span> <span class="o">=</span> <span class="n">reporter</span><span class="o">.</span><span class="n">get_password</span><span class="p">(</span>
+                <span class="s2">&quot;Please enter the password for </span><span class="si">{}</span><span class="s2">@</span><span class="si">{}</span><span class="s2">:&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">params</span><span class="o">.</span><span class="n">user</span><span class="p">,</span>
+                                                              <span class="n">params</span><span class="o">.</span><span class="n">host</span><span class="p">))</span>
+
         <span class="n">interface</span> <span class="o">=</span> <span class="n">factory</span><span class="o">.</span><span class="n">create</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">ohif</span> <span class="o">=</span> <span class="kc">None</span>
