--- a/_modules/copyxnat/ui/command_line.html
+++ b/_modules/copyxnat/ui/command_line.html
@@ -43,7 +43,6 @@
 <span class="sd">&quot;&quot;&quot;Command line processing&quot;&quot;&quot;</span>
 
 <span class="kn">import</span> <span class="nn">argparse</span>
-<span class="kn">from</span> <span class="nn">getpass</span> <span class="kn">import</span> <span class="n">getpass</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.commands.find_commands</span> <span class="kn">import</span> <span class="n">find_command</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands</span> <span class="kn">import</span> <span class="n">find_commands</span>
@@ -56,10 +55,21 @@
 <div class="viewcode-block" id="run_command_line"><a class="viewcode-back" href="../../../copyxnat.ui.command_line.html#copyxnat.ui.command_line.run_command_line">[docs]</a><span class="k">def</span> <span class="nf">run_command_line</span><span class="p">(</span><span class="n">args</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Entry point for copyxnat application&quot;&quot;&quot;</span>
 
+    <span class="n">command</span><span class="p">,</span> <span class="n">src_params</span><span class="p">,</span> <span class="n">dst_params</span><span class="p">,</span> <span class="n">project_list</span><span class="p">,</span> <span class="n">app_settings</span> <span class="o">=</span> \
+        <span class="n">_parse_command_line</span><span class="p">(</span><span class="n">args</span><span class="p">)</span>
+
+    <span class="n">run_command</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
+                <span class="n">src_params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
+                <span class="n">dst_params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
+                <span class="n">project_filter</span><span class="o">=</span><span class="n">project_list</span><span class="p">,</span>
+                <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span>
+                <span class="p">)</span></div>
+
+
+<span class="k">def</span> <span class="nf">_parse_command_line</span><span class="p">(</span><span class="n">args</span><span class="p">):</span>
     <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span>
         <span class="n">description</span><span class="o">=</span><span class="s1">&#39;CopyXnat: Utility for downloading or copying projects &#39;</span>
                     <span class="s1">&#39;between XNAT servers&#39;</span><span class="p">)</span>
-
     <span class="n">version_string</span> <span class="o">=</span> <span class="n">get_version_string</span><span class="p">()</span>
     <span class="n">friendly_version_string</span> <span class="o">=</span> <span class="n">version_string</span> <span class="k">if</span> <span class="n">version_string</span> <span class="k">else</span> <span class="s1">&#39;unknown&#39;</span>
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span>
@@ -67,57 +77,45 @@
         <span class="n">action</span><span class="o">=</span><span class="s1">&#39;version&#39;</span><span class="p">,</span>
         <span class="n">version</span><span class="o">=</span><span class="n">friendly_version_string</span>
     <span class="p">)</span>
-
     <span class="n">subparsers</span> <span class="o">=</span> <span class="n">parser</span><span class="o">.</span><span class="n">add_subparsers</span><span class="p">(</span><span class="n">dest</span><span class="o">=</span><span class="s1">&#39;command&#39;</span><span class="p">)</span>
-
     <span class="k">for</span> <span class="n">command</span> <span class="ow">in</span> <span class="n">find_commands</span><span class="o">.</span><span class="n">commands</span><span class="p">():</span>
         <span class="n">subparsers</span><span class="o">.</span><span class="n">add_parser</span><span class="p">(</span><span class="n">command</span><span class="o">.</span><span class="n">COMMAND_LINE</span><span class="p">,</span> <span class="n">help</span><span class="o">=</span><span class="n">command</span><span class="o">.</span><span class="n">HELP</span><span class="p">)</span>
-
     <span class="c1"># Arguments common to all commands</span>
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-y&quot;</span><span class="p">,</span> <span class="s2">&quot;--dry_run&quot;</span><span class="p">,</span>
                         <span class="n">action</span><span class="o">=</span><span class="s2">&quot;store_true&quot;</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Do not modify the destination&quot;</span><span class="p">,</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-k&quot;</span><span class="p">,</span> <span class="s2">&quot;--insecure&quot;</span><span class="p">,</span>
                         <span class="n">action</span><span class="o">=</span><span class="s2">&quot;store_true&quot;</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Do not enforce strict SSL certificate checks&quot;</span><span class="p">,</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-v&quot;</span><span class="p">,</span> <span class="s2">&quot;--verbose&quot;</span><span class="p">,</span>
                         <span class="n">action</span><span class="o">=</span><span class="s2">&quot;store_true&quot;</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Show verbose output&quot;</span><span class="p">,</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-s&quot;</span><span class="p">,</span> <span class="s2">&quot;--src-host&quot;</span><span class="p">,</span> <span class="n">required</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Host name of the XNAT server containing the data&quot;</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-u&quot;</span><span class="p">,</span> <span class="s2">&quot;--src-user&quot;</span><span class="p">,</span> <span class="n">required</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;User name for accessing XNAT server containing &quot;</span>
                              <span class="s2">&quot;the data&quot;</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-i&quot;</span><span class="p">,</span> <span class="s2">&quot;--rsync-src-user&quot;</span><span class="p">,</span>
                         <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;When using rsync transfer, ssh username for &quot;</span>
                              <span class="s2">&quot;source server (this is not the XNAT username)&quot;</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-p&quot;</span><span class="p">,</span> <span class="s2">&quot;--project&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Name of project containing the data&quot;</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-c&quot;</span><span class="p">,</span> <span class="s2">&quot;--cache-dir&quot;</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;File path here local cache files are to be stored&quot;</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-n&quot;</span><span class="p">,</span> <span class="s2">&quot;--skip-existing&quot;</span><span class="p">,</span>
                         <span class="n">action</span><span class="o">=</span><span class="s2">&quot;store_true&quot;</span><span class="p">,</span>
                         <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Skip session and all children if it already &quot;</span>
                              <span class="s2">&quot;exists on the destination server&quot;</span><span class="p">,</span>
                         <span class="p">)</span>
-
     <span class="n">parser</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;-t&quot;</span><span class="p">,</span> <span class="s2">&quot;--transfer-mode&quot;</span><span class="p">,</span>
                         <span class="n">default</span><span class="o">=</span><span class="s1">&#39;file&#39;</span><span class="p">,</span>
                         <span class="n">choices</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;file&#39;</span><span class="p">,</span> <span class="s1">&#39;zip&#39;</span><span class="p">,</span> <span class="s1">&#39;rsync&#39;</span><span class="p">,</span> <span class="s1">&#39;meta&#39;</span><span class="p">],</span>
@@ -133,7 +131,6 @@
                              <span class="s2">&quot; to have manually transferred the files over &quot;</span>
                              <span class="s2">&quot;first.&quot;</span>
                         <span class="p">)</span>
-
     <span class="k">for</span> <span class="n">command</span> <span class="ow">in</span> <span class="n">find_commands</span><span class="o">.</span><span class="n">commands</span><span class="p">():</span>
         <span class="n">command_key</span> <span class="o">=</span> <span class="n">command</span><span class="o">.</span><span class="n">COMMAND_LINE</span>
         <span class="n">sub_parser</span> <span class="o">=</span> <span class="n">subparsers</span><span class="o">.</span><span class="n">choices</span><span class="p">[</span><span class="n">command_key</span><span class="p">]</span>
@@ -173,30 +170,22 @@
                                     <span class="n">help</span><span class="o">=</span><span class="s2">&quot;Overwrite existing data on the&quot;</span>
                                          <span class="s2">&quot;destination server&quot;</span>
                                     <span class="p">)</span>
-
     <span class="n">args</span> <span class="o">=</span> <span class="n">parser</span><span class="o">.</span><span class="n">parse_args</span><span class="p">(</span><span class="n">args</span><span class="p">)</span>
-
     <span class="n">command</span> <span class="o">=</span> <span class="n">find_command</span><span class="p">(</span><span class="n">args</span><span class="o">.</span><span class="n">command</span><span class="p">)</span>
-
     <span class="n">src_rsync</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">rsync_src_user</span> <span class="k">if</span> <span class="s1">&#39;rsync_src_user&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">None</span>
-
     <span class="n">fix_scan_types</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">fix_scan_types</span> <span class="k">if</span> <span class="s1">&#39;fix_scan_types&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">False</span>
     <span class="n">verbose</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">verbose</span> <span class="k">if</span> <span class="s1">&#39;verbose&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">False</span>
     <span class="n">overwrite_existing</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">overwrite_existing</span> <span class="k">if</span> \
         <span class="s1">&#39;overwrite_existing&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">False</span>
     <span class="n">ignore_datatype_errors</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">ignore_datatype_errors</span> <span class="k">if</span> \
         <span class="s1">&#39;ignore_datatype_errors&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">False</span>
-
     <span class="n">transfer_mode</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">transfer_mode</span>
-
     <span class="n">project_list</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">project</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">)</span> <span class="k">if</span> <span class="s1">&#39;project&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="ow">and</span> \
                                               <span class="n">args</span><span class="o">.</span><span class="n">project</span> <span class="k">else</span> <span class="kc">None</span>
-
     <span class="n">src_params</span> <span class="o">=</span> <span class="n">XnatServerParams</span><span class="p">(</span><span class="n">host</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">src_host</span><span class="p">,</span>
                                   <span class="n">user</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">src_user</span><span class="p">,</span>
                                   <span class="n">rsync_user</span><span class="o">=</span><span class="n">src_rsync</span><span class="p">,</span>
                                   <span class="n">insecure</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">insecure</span><span class="p">)</span>
-
     <span class="k">if</span> <span class="n">command</span><span class="o">.</span><span class="n">USE_DST_SERVER</span><span class="p">:</span>
         <span class="n">dst_host</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">dst_host</span> <span class="k">if</span> <span class="s1">&#39;dst_host&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">None</span>
         <span class="n">dst_user</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">dst_user</span> <span class="k">if</span> <span class="s1">&#39;dst_user&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">None</span>
@@ -219,12 +208,7 @@
         <span class="n">skip_existing</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">skip_existing</span>
     <span class="p">)</span>
 
-    <span class="n">run_command</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
-                <span class="n">src_params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
-                <span class="n">dst_params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
-                <span class="n">project_filter</span><span class="o">=</span><span class="n">project_list</span><span class="p">,</span>
-                <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span>
-                <span class="p">)</span></div>
+    <span class="k">return</span> <span class="n">command</span><span class="p">,</span> <span class="n">src_params</span><span class="p">,</span> <span class="n">dst_params</span><span class="p">,</span> <span class="n">project_list</span><span class="p">,</span> <span class="n">app_settings</span>
 </pre></div>
 
             <div class="clearer"></div>
